# VibeSplat

./: .gitignore  README.md  install.py  pyproject.toml  server.py
backend/: engine.py
templates/: index.html
