[project]
name = "opensplat"
version = "0.1.1"
description = "A self-hosted, web-based Gaussian Splatting appliance."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
    "torch",
    "viser",
    "opencv-python-headless",
    "tqdm",
    "numpy<2",
    "plyfile",
    "python-multipart",
    "rich",
    "packaging",
    "ninja",
    "setuptools",
    "gsplat==1.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
environments = ["sys_platform == 'linux'"]